--- a/pages/stats.html
+++ b/pages/stats.html
@@ -48,7 +48,7 @@
             </div>
         </nav>
     </header>
-    <main id="mainConSta" class="container">
+    <main class="container">
       <section class="color py5">
         <h1>Stats</h1>
         <div class="tabla d-flex justify-content-center align-items-center py-5">
