--- a/pages/details.html
+++ b/pages/details.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/Logo_A_E.png" type="image/x-icon">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/style.css">
 </head>
+
 <body>
     <header>
 
         <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Fourth navbar example">
             <img class="logo" src="../img/Logo_Amazing_Events.png" alt="logo">
             <div class="container-fluid">
-                
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -28,11 +31,12 @@
                             <a class="nav-link active" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./pages/upcoming_events.html">Upcoming
+                            <a class="nav-link active" aria-current="page" href="./upcoming_events.html">Upcoming
                                 Events</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./pages/past_events.html">Past Events</a>
+                            <a class="nav-link active" aria-current="page" href="./past_events.html">Past
+                                Events</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Details</a>
@@ -41,52 +45,32 @@
                             <a class="nav-link active" aria-current="page" href="./contact.html">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./pages/stats.html">Stats</a>
+                            <a class="nav-link active" aria-current="page" href="./stats.html">Stats</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <main id="mainConSta" class="container">
-        <section class="d-flex justify-content-center py-5">
-            <div class="card mb-3 " style="max-width: 500%;">
-                <div class="row g-2">
-                  <div class="col-md-4">
-                    <img class="bd-placeholder-img img-fluid py-5" width="600" height="400"
-                                src="../img/Costume_Party.jpg" alt="party">
-                  </div>
-                  <div class="col-md-8 ">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <ul>
-                        <li>Name</li>
-                        <li>Date</li>
-                        <li>Description</li>
-                        <li>Categori</li>
-                        <li>Place</li>
-                        <li>Capacity</li>
-                        <li>Assistance or estimate</li>
-                        <li>Price</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
+    <main  class="container d-flex flex-wrap">
+        <section class="d-flex flex-wrap justify-content-center py-5">
+            <div id="details_card" class="card mb-3 " style="max-width: 500%;">
+               
+            </div>
         </section>
 
     </main>
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 ">
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-            <li class="ms-3"><a class="text-muted" href="https://twitter.com"><img src="../img/gorjeo.png" alt="twiter" width="40"
-                height="40">
-            </a></li>
-            <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/"><img src="../img/instagram.png" alt="instagram" width="40"
-                height="40">
-            </a></li>
-            <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/"><img src="../img/facebook.png" alt="facebook" width="40"
-                height="40">
-            </a></li>
+            <li class="ms-3"><a class="text-muted" href="https://twitter.com"><img src="../img/gorjeo.png" alt="twiter"
+                        width="40" height="40">
+                </a></li>
+            <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/"><img src="../img/instagram.png"
+                        alt="instagram" width="40" height="40">
+                </a></li>
+            <li class="ms-3"><a class="text-muted" href="https://www.facebook.com/"><img src="../img/facebook.png"
+                        alt="facebook" width="40" height="40">
+                </a></li>
         </ul>
         <div class="col-md-4 d-flex align-items-center">
             <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
@@ -97,6 +81,12 @@
             <span class="color mb-3 mb-md-0 ">© 2023 SMB</span>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous">
+    </script>
+    <script type="module" src="../js/amazing.js"></script>
+    <script type="module" src="../js/details.js"></script>
 </body>
+
 </html>
