agregando stats dinamico

--- a/pages/upcoming_events.html
+++ b/pages/upcoming_events.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarsExample04">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item">
-                            <a class="nav-link active" href="../index.html">Home</a>
+                            <a class="nav-link active" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Upcoming
@@ -118,7 +118,6 @@
 
         <div class="album py-5 ">
             <div class="container">
-
                 <div id="card_main" class="row row-cols-1 row-cols-md-3 g-4">
                     <template id="card_tpl">
                         <div class="col">       
@@ -168,8 +167,7 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous">
     </script>
-    <script type="module" src="../js/amazing.js"></script>
-    <script type="module" src="../js/details.js"></script>
+    
     <script type="module" src="../js/upcoming_events.js"></script>
 </body>
 
