--- a/pages/past_events.html
+++ b/pages/past_events.html
@@ -28,7 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarsExample04">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item">
-                            <a class="nav-link active" href="../index.html">Home</a>
+                            <a class="nav-link active" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./upcoming_events.html">Upcoming
@@ -171,10 +171,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
         </script>
-    <script type="module" src="../js/amazing.js"></script>
-    <script type="module" src="../js/check.js"></script>
+    
     <script type="module" src="../js/past_events.js"></script>
-    <script type="module" src="../js/details.js"></script>
 </body>
 
 </html>
